--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="images/favicon2.png" rel="apple-touch-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
-	<title>Simple Javascript Calculator</title>
+	<title>Calculator</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<div class="copyright">
-		<h5 style="color:blue;"> <strong> Developed with 💖 From Pure Javascript </strong></h5>
+		
 		<p>&copy Copyright 2023 | Designed & Developed by <strong> Sai </strong> | All Rights Reserved.</p>
 
 	</div>
